photo title: fix positioning and sizes on mobile

--- a/src/styles/sections/_photo.sass
+++ b/src/styles/sections/_photo.sass
@@ -27,10 +27,10 @@
 
   &-caption
     position: absolute
-    bottom: 9rem
+    bottom: 8.5rem
     left: 0
     right: 0
-    padding: 0 3rem 0 1rem
+    padding: 0 1rem 0 2rem
     z-index: 10
 
     @media (min-width: 415px)
@@ -43,7 +43,7 @@
       bottom: 13.5rem
 
     h2
-      font-size: 2.25rem
+      font-size: 2.5rem
       line-height: 1.2
 
       @media (min-width: 415px)
